[gd_scene load_steps=6 format=3 uid="uid://7jt1522jhnqf"]

[ext_resource type="Script" uid="uid://bydul6ebt1viq" path="res://minigames/buttonsmasher/button_masher.gd" id="1_4c17o"]
[ext_resource type="PackedScene" uid="uid://3r18gfdd2hvf" path="res://scenes/AniDynamite.tscn" id="2_rt1km"]
[ext_resource type="Texture2D" uid="uid://7cfwbuoeucqu" path="res://assets/buttonsmasher/Virus.png" id="3_bwmw6"]
[ext_resource type="AudioStream" uid="uid://b64027kfku64i" path="res://assets/buttonsmasher/boom5.wav" id="4_ktcd1"]
[ext_resource type="PackedScene" uid="uid://cmp2cvj5x3ur8" path="res://scenes/AniBomba.tscn" id="5_pjp7l"]

[node name="ButtonMasher" type="Node2D"]
script = ExtResource("1_4c17o")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1147.0
offset_bottom = 645.0
color = Color(0.8646751, 0.86467516, 0.8646751, 1)

[node name="DynamiteBlaster" parent="." instance=ExtResource("2_rt1km")]
position = Vector2(339, 443)
frame_progress = 0.6407569

[node name="Virus" type="Sprite2D" parent="."]
position = Vector2(827, 455)
texture = ExtResource("3_bwmw6")

[node name="Texto" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-2, 0)
stream = ExtResource("4_ktcd1")

[node name="AniBomba" parent="." instance=ExtResource("5_pjp7l")]

[connection signal="ready" from="." to="." method="_on_ready"]
